--- a/sensora-ui/index.html
+++ b/sensora-ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark" lang="">
+<html class="idark" lang="">
 <head>
   <meta charset="UTF-8">
   <link href="/favicon.ico" rel="icon">
