--- a/sensora-ui/index.html
+++ b/sensora-ui/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="idark" lang="">
+<html lang="">
 <head>
   <meta charset="UTF-8">
   <link href="/favicon.ico" rel="icon">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vite App</title>
 </head>
-<body>
+<body class="bg-background">
 <div id="app"></div>
 <script src="/src/main.ts" type="module"></script>
 </body>
