--- a/sensora-ui/index.html
+++ b/sensora-ui/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vite App</title>
 </head>
-<body class="bg-background">
+<body class="bg-background h-full">
 <div id="app"></div>
 <script src="/src/main.ts" type="module"></script>
 </body>
