--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link href="/logo/icon_sm.png" rel="icon">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Vite App</title>
+  <title>Sensora</title>
 </head>
 <body class="bg-background h-full">
 <div id="app"></div>
